foundation-objs/main/default/objects/Project__c/fields/Lead_Developer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Developer__c</fullName>
    <description>In case this is an in-house project, select the name of the lead developer.</description>
    <inlineHelpText>In case this is an in-house project, select the name of the lead developer,</inlineHelpText>
    <label>Lead Developer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abhay Singh</fullName>
            </value>
            <value>
                <fullName>Akhilesh Tiwari</fullName>
            </value>
            <value>
                <fullName>Anand Udhwani</fullName>
            </value>
            <value>
                <fullName>Ankala Balaraju</fullName>
            </value>
            <value>
                <fullName>Anmol Singh</fullName>
            </value>
            <value>
                <fullName>Ashish Kumar</fullName>
            </value>
            <value>
                <fullName>Ashwin Ayyappan</fullName>
            </value>
            <value>
                <fullName>Avinash Mishra</fullName>
            </value>
            <value>
                <fullName>Banesh Dummani</fullName>
            </value>
            <value>
                <fullName>Gottapu Rajesh</fullName>
            </value>
            <value>
                <fullName>Guguloth Lachhiram</fullName>
            </value>
            <value>
                <fullName>Hariharan Ramasamy</fullName>
            </value>
            <value>
                <fullName>Hunny Meghnani</fullName>
            </value>
            <value>
                <fullName>Kamadani Vamsi</fullName>
            </value>
            <value>
                <fullName>Kanagala Shiva Prasad</fullName>
            </value>
            <value>
                <fullName>Kothapalli Bhargavi</fullName>
            </value>
            <value>
                <fullName>Manish Kumar</fullName>
            </value>
            <value>
                <fullName>Mayank Mani</fullName>
            </value>
            <value>
                <fullName>Mohan Ganjalagunte</fullName>
            </value>
            <value>
                <fullName>Mukul Trivedi</fullName>
            </value>
            <value>
                <fullName>Nazneen Nidha</fullName>
            </value>
            <value>
                <fullName>Ninad Patil</fullName>
            </value>
            <value>
                <fullName>Oindrila Biswas</fullName>
            </value>
            <value>
                <fullName>Pintu Kumar</fullName>
            </value>
            <value>
                <fullName>Preksha Singhal</fullName>
            </value>
            <value>
                <fullName>Ramesh Kothapally</fullName>
            </value>
            <value>
                <fullName>Ram Kumar</fullName>
            </value>
            <value>
                <fullName>Roshni Garg</fullName>
            </value>
            <value>
                <fullName>Sachin Mehndiratta</fullName>
            </value>
            <value>
                <fullName>Sakthidoss Gajendran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>