foundation-objs/main/default/objects/Project__c/fields/Live_Status__c.field-meta.xml
<CustomField>
    <fullName>Live_Status__c</fullName>
    <formula>IF(ISPICKVAL(Project_Stage__c,	&apos;Live&apos;),
IF(NOT(ISBLANK(Go_Live_Date__c)), iF(Go_Live_Date__c &gt;  Benchmark_Date_Live__c ,
&quot;RED&quot;,
&quot;GREEN&quot;),
IF(TODAY() &gt; Benchmark_Date_Live__c,
&quot;RED&quot;,
&quot;GREEN&quot;)),&apos;NA&apos;)</formula>
    <label>Live Status</label>
    <type>Text</type>
</CustomField>