foundation-objs/main/default/objects/Project__c/fields/LOE_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>LOE_Received_Date__c</fullName>
    <description>The date that is mentioned as the project start date as per the approved LOE.</description>
    <inlineHelpText>The date that is mentioned as the project start date as per the approved LOE.</inlineHelpText>
    <label>Integration Start Date</label>
    <type>Date</type>
</CustomField>