foundation-objs/main/default/objects/Project__c/fields/Master_admin_email__c.field-meta.xml
<CustomField>
    <fullName>Master_admin_email__c</fullName>
    <label>Master admin email</label>
    <type>Email</type>
</CustomField>