foundation-objs/main/default/objects/Project__c/fields/Mode_of_Integration__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Integration__c</fullName>
    <label>Mode of Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON API</fullName>
            </value>
            <value>
                <fullName>File upload API</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>Manual Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>