foundation-objs/main/default/objects/Project__c/fields/MS_Expert__c.field-meta.xml
<CustomField>
    <fullName>MS_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MS Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>