foundation-objs/main/default/objects/Project__c/fields/On_hold_email_sent__c.field-meta.xml
<CustomField>
    <fullName>On_hold_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On hold email sent</label>
    <type>Checkbox</type>
</CustomField>