foundation-objs/main/default/objects/Project__c/fields/On_hold_start_date__c.field-meta.xml
<CustomField>
    <fullName>On_hold_start_date__c</fullName>
    <description>When project goes to on-hold from any stage, status of the project is changed to &quot;on-hold&quot; from active</description>
    <inlineHelpText>When project goes to on-hold from any stage, status of the project is changed to &quot;on-hold&quot; from active</inlineHelpText>
    <label>On-hold start date</label>
    <type>Date</type>
</CustomField>