foundation-objs/main/default/objects/Project__c/fields/On_hold_tentative_resume_date__c.field-meta.xml
<CustomField>
    <fullName>On_hold_tentative_resume_date__c</fullName>
    <description>Client should be consulted to give the tentative on-hold resume date. This should be mandatorily filled to change the status of the project to &quot;on-hold&quot;</description>
    <inlineHelpText>Client should be consulted to give the tentative on-hold resume date. This should be mandatorily filled to change the status of the project to &quot;on-hold&quot;</inlineHelpText>
    <label>On-hold tentative resume date</label>
    <type>Date</type>
</CustomField>