foundation-objs/main/default/objects/Project__c/fields/Onboarding_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_completion_date__c</fullName>
    <label>Onboarding completion date</label>
    <type>Date</type>
</CustomField>