foundation-objs/main/default/objects/Project__c/fields/Onboarding_start_date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_start_date__c</fullName>
    <label>Onboarding start date</label>
    <type>Date</type>
</CustomField>