foundation-objs/main/default/objects/Project__c/fields/Order_form_link__c.field-meta.xml
<CustomField>
    <fullName>Order_form_link__c</fullName>
    <label>Order form link</label>
    <type>Url</type>
</CustomField>