foundation-objs/main/default/objects/Project__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <label>OTP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>