foundation-objs/main/default/objects/Project__c/fields/OTP_SKUs__c.field-meta.xml
<CustomField>
    <fullName>OTP_SKUs__c</fullName>
    <label>Opted for AMC here?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>