foundation-objs/main/default/objects/Project__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <formula>IF( ISPICKVAL(Status__c,&apos;Active&apos;),
   IF(NOT(ISBLANK(Go_Live_Date__c)), iF(Go_Live_Date__c &gt;   Benchmark_Date_Overall__c , 
      &quot;RED&quot;, 
      &quot;GREEN&quot;),
   IF(TODAY() &gt;  Benchmark_Date_Overall__c,
      &quot;RED&quot;, 
      &quot;GREEN&quot;)
),

IF( ISPICKVAL(Status__c,&apos;At Risk&apos;),
   IF(NOT(ISBLANK(Go_Live_Date__c)), iF(Go_Live_Date__c &gt;  Benchmark_Date_Overall__c, 
      &quot;RED&quot;,  
      &quot;AMBER&quot;),
   IF(TODAY() &gt;  Benchmark_Date_Overall__c,
      &quot;RED&quot;, 
      &quot;AMBER&quot;)
),

IF( ISPICKVAL(Status__c,&apos;On-hold&apos;),
   IF(NOT(ISBLANK(Go_Live_Date__c)), iF(Go_Live_Date__c &gt;  Benchmark_Date_Overall__c, 
      &quot;RED&quot;, IF(LOE_Received_Date__c &gt; TODAY(),&quot;GREEN&quot;, 
      &quot;AMBER&quot;)),
   IF(TODAY() &gt;  Benchmark_Date_Overall__c,
      &quot;RED&quot;,IF(LOE_Received_Date__c &gt; TODAY(),&quot;GREEN&quot;, 
      &quot;AMBER&quot;))
),

IF( ISPICKVAL(Status__c,&apos;Complete&apos;),
   IF(NOT(ISBLANK(Go_Live_Date__c)), iF(Go_Live_Date__c &gt;  Benchmark_Date_Overall__c, 
      &quot;RED&quot;,  
      &quot;GREEN&quot;),
   IF(TODAY() &gt;  Benchmark_Date_Overall__c,
      &quot;RED&quot;, 
      &quot;GREEN&quot;)
),

&apos;&apos;
))))</formula>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>