foundation-objs/main/default/objects/Project__c/fields/Penny_Value_Testing_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Penny_Value_Testing_Planned_Date__c</fullName>
    <label>Penny Value Testing : Planned Date</label>
    <type>Date</type>
</CustomField>