foundation-objs/main/default/objects/Project__c/fields/Pm_Project_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pm_Project_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Owner from the Program Team</description>
    <label>PM Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e2x000000UX85</value>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>shriram.bhat@cleartax.in</value>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>hanumanthu.jarpala@cleartax.in</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>