foundation-objs/main/default/objects/Project__c/fields/Pre_Sales_Kick_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Kick_off_Date__c</fullName>
    <description>Date on which the first pre-sale meeting was held.</description>
    <inlineHelpText>Date on which the first pre-sale meeting was held.</inlineHelpText>
    <label>Pre-Sales Kick-off Date</label>
    <type>Date</type>
</CustomField>