foundation-objs/main/default/objects/Project__c/fields/Prereq_details_shared_Actual_date__c.field-meta.xml
<CustomField>
    <fullName>Prereq_details_shared_Actual_date__c</fullName>
    <label>Prereq details shared : Actual date</label>
    <type>Date</type>
</CustomField>