foundation-objs/main/default/objects/Project__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>This field defines for what product has the client chosen integration for</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>EWB</fullName>
            </value>
            <value>
                <fullName>EINV</fullName>
            </value>
            <value>
                <fullName>Max ITC</fullName>
            </value>
            <value>
                <fullName>GSTIN Verification</fullName>
            </value>
            <value>
                <fullName>TDS 206 AB</fullName>
            </value>
            <value>
                <fullName>Invoice Discounting</fullName>
            </value>
            <value>
                <fullName>KSA_EINV_II</fullName>
                <label>KSA EINV II</label>
            </value>
            <value>
                <fullName>KSA EINV I</fullName>
            </value>
            <value>
                <fullName>Clear Capture</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>Clear Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>