foundation-objs/main/default/objects/Project__c/fields/Production_User_Id_given_Actual_date__c.field-meta.xml
<CustomField>
    <fullName>Production_User_Id_given_Actual_date__c</fullName>
    <label>Production User Id given: Actual date</label>
    <type>Date</type>
</CustomField>