foundation-objs/main/default/objects/Project__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Add a brief description about the project.</description>
    <inlineHelpText>Add a brief description about the project.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>