foundation-objs/main/default/objects/Project__c/fields/Project_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Project ID (18)</label>
    <type>Text</type>
</CustomField>