foundation-objs/main/default/objects/Project__c/fields/Project_Kick_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Kick_off_Date__c</fullName>
    <description>Date on which the project kick-off meeting was held after the PO.</description>
    <inlineHelpText>Date on which the project kick-off meeting was held after the PO.</inlineHelpText>
    <label>Project Kick-off Date</label>
    <type>Date</type>
</CustomField>