foundation-objs/main/default/objects/Project__c/fields/Project_Owner_automation__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_automation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Project - Owner automation</label>
    <type>Checkbox</type>
</CustomField>