foundation-objs/main/default/objects/Project__c/fields/Project_Phases__c.field-meta.xml
<CustomField>
    <fullName>Project_Phases__c</fullName>
    <label>Project Phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration Onboarding</fullName>
            </value>
            <value>
                <fullName>ERP &amp; Network access</fullName>
                <label>IT Pre-requisites</label>
            </value>
            <value>
                <fullName>Requirement gathering</fullName>
            </value>
            <value>
                <fullName>Developer Confirmation</fullName>
            </value>
            <value>
                <fullName>Implementation &amp; Internal testing</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>