foundation-objs/main/default/objects/Project__c/fields/Project_Plan_Sign_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Sign_off_Date__c</fullName>
    <description>Date on which the Project Plan was signed-off by the customer.</description>
    <inlineHelpText>Date on which the Project Plan was signed-off by the customer.</inlineHelpText>
    <label>Project Plan Sign-off Date</label>
    <type>Date</type>
</CustomField>