foundation-objs/main/default/objects/Project__c/fields/Project_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Status__c</fullName>
    <formula>IF((ISPICKVAL(Project_Stage__c,	&apos;Project Plan&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;Implementation&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;UAT&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;Live&apos;)),
IF(NOT(ISBLANK(Project_Plan_Sign_off_Date__c)), iF(Project_Plan_Sign_off_Date__c &gt;  Benchmark_Date_Project_Plan__c ,
&quot;RED&quot;,
&quot;GREEN&quot;),
IF(TODAY() &gt; Benchmark_Date_Project_Plan__c,
&quot;RED&quot;,
&quot;GREEN&quot;)),&apos;NA&apos;)</formula>
    <label>Project Plan Status</label>
    <type>Text</type>
</CustomField>