foundation-objs/main/default/objects/Project__c/fields/Project_Priority__c.field-meta.xml
<CustomField>
    <fullName>Project_Priority__c</fullName>
    <defaultValue>(&quot;Normal&quot;)</defaultValue>
    <label>Project Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>