foundation-objs/main/default/objects/Project__c/fields/Quality_Testing_Client_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Quality_Testing_Client_Planned_Date__c</fullName>
    <label>Quality Testing (Client): Planned Date</label>
    <type>Date</type>
</CustomField>