foundation-objs/main/default/objects/Project__c/fields/Requirement_gathering_start_date__c.field-meta.xml
<CustomField>
    <fullName>Requirement_gathering_start_date__c</fullName>
    <label>Requirement gathering start date</label>
    <type>Date</type>
</CustomField>