foundation-objs/main/default/objects/Project__c/fields/Rocketlane_Integration__c.field-meta.xml
<CustomField>
    <fullName>Rocketlane_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rocketlane Integration</label>
    <type>Checkbox</type>
</CustomField>