foundation-objs/main/default/objects/Project__c/fields/Scope_Category__c.field-meta.xml
<CustomField>
    <fullName>Scope_Category__c</fullName>
    <label>Scope Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>