foundation-objs/main/default/objects/Project__c/fields/Scope_Discussion_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scope_Discussion_Start_Date__c</fullName>
    <description>Date on which the presale scope discussions started.</description>
    <inlineHelpText>Date on which the presale scope discussions started.</inlineHelpText>
    <label>Scope Discussion Start Date</label>
    <type>Date</type>
</CustomField>