foundation-objs/main/default/objects/Project__c/fields/SE_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>SE_Owner_Email__c</fullName>
    <formula>CTX_SE__r.Email</formula>
    <label>SE Owner Email</label>
    <type>Text</type>
</CustomField>