foundation-objs/main/default/objects/Project__c/fields/SE_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>SE_Owner_Name__c</fullName>
    <formula>CTX_SE__r.FirstName +&apos; &apos;+ CTX_SE__r.LastName</formula>
    <label>SE Owner Name</label>
    <type>Text</type>
</CustomField>