foundation-objs/main/default/objects/Project__c/fields/SE_Scheduling_Link__c.field-meta.xml
<CustomField>
    <fullName>SE_Scheduling_Link__c</fullName>
    <formula>CTX_SE__r.Scheduling_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SE Scheduling Link</label>
    <type>Text</type>
</CustomField>