foundation-objs/main/default/objects/Project__c/fields/SI_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SI_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SI Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>