foundation-objs/main/default/objects/Project__c/fields/SI_email_DMS_project_only__c.field-meta.xml
<CustomField>
    <fullName>SI_email_DMS_project_only__c</fullName>
    <description>Enter email id of the Client SI</description>
    <label>SI email (DMS project only)</label>
    <type>Email</type>
</CustomField>