foundation-objs/main/default/objects/Project__c/fields/SI_name_DMS_project_only__c.field-meta.xml
<CustomField>
    <fullName>SI_name_DMS_project_only__c</fullName>
    <description>This field is for entering SI name in case project is DMS project</description>
    <label>Client SI POC name (DMS project only)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>