foundation-objs/main/default/objects/Project__c/fields/SI_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>SI_Partner_Account__c</fullName>
    <label>SI Partner Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>