foundation-objs/main/default/objects/Project__c/fields/SI_Payment_Tracker__c.field-meta.xml
<CustomField>
    <fullName>SI_Payment_Tracker__c</fullName>
    <label>SI Payment Tracker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO Release</fullName>
            </value>
            <value>
                <fullName>50% payment done</fullName>
            </value>
            <value>
                <fullName>Final payment done</fullName>
            </value>
            <value>
                <fullName>1st 50% Payment Status</fullName>
                <isActive>false</isActive>
                <label>1st 50% Payment Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>