foundation-objs/main/default/objects/Project__c/fields/SI_Proposal_Requirement_Documentation__c.field-meta.xml
<CustomField>
    <fullName>SI_Proposal_Requirement_Documentation__c</fullName>
    <label>SI Proposal/ Requirement Documentation</label>
    <type>Url</type>
</CustomField>