foundation-objs/main/default/objects/Project__c/fields/Sign_off_on_SOW_Actual_date__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_on_SOW_Actual_date__c</fullName>
    <label>Sign-off on SOW : Actual date</label>
    <type>Date</type>
</CustomField>