foundation-objs/main/default/objects/Project__c/fields/SKU_x_ERP__c.field-meta.xml
<CustomField>
    <fullName>SKU_x_ERP__c</fullName>
    <label>SKU x ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>