foundation-objs/main/default/objects/Project__c/fields/SOW_FS_and_checklist_shared_actual_date__c.field-meta.xml
<CustomField>
    <fullName>SOW_FS_and_checklist_shared_actual_date__c</fullName>
    <label>SOW/FS and checklist shared:actual date</label>
    <type>Date</type>
</CustomField>