foundation-objs/main/default/objects/Project__c/fields/SOW_FS_and_checklist_shared_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_FS_and_checklist_shared_Planned_Date__c</fullName>
    <label>SOW/FS and checklist shared:Planned Date</label>
    <type>Date</type>
</CustomField>