foundation-objs/main/default/objects/Project__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <formula>( Go_Live_Date__c  -   LOE_Received_Date__c  ) / 7</formula>
    <label>TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>