foundation-objs/main/default/objects/Project__c/fields/Testing_with_Client_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_with_Client_Planned_Date__c</fullName>
    <label>Testing with Client : Planned Date</label>
    <type>Date</type>
</CustomField>