foundation-objs/main/default/objects/Project__c/fields/Turnover_In_Cr__c.field-meta.xml
<CustomField>
    <fullName>Turnover_In_Cr__c</fullName>
    <label>Turnover (In Cr)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Turnover</valueSetName>
    </valueSet>
</CustomField>