foundation-objs/main/default/objects/Project__c/fields/Type_of_Integration__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Integration__c</fullName>
    <label>Type of Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API - Only by CT SI</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse SAP ECC/HANA</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse SAP B1</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse Custom ERP</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse Tally ERP</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse Netsuite ERP</fullName>
            </value>
            <value>
                <fullName>FTP/SFTP - Only by customer</fullName>
            </value>
            <value>
                <fullName>API- Only by Customer</fullName>
            </value>
            <value>
                <fullName>FTP/ SFTP - Only by CT Inhouse</fullName>
            </value>
            <value>
                <fullName>FTP/ SFTP - Only by SI</fullName>
            </value>
            <value>
                <fullName>ID - API based Integration</fullName>
            </value>
            <value>
                <fullName>ID - Middleware based Integration</fullName>
            </value>
            <value>
                <fullName>ID - SFTP based Integration</fullName>
            </value>
            <value>
                <fullName>ID - Manual Integration</fullName>
            </value>
            <value>
                <fullName>API - Only by CT Inhouse Microsoft ERP</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Invoice Discounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>