foundation-objs/main/default/objects/Project__c/fields/UAT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_End_Date__c</fullName>
    <description>Date on which the UAT was signed-off by the customer.</description>
    <inlineHelpText>Date on which the UAT was signed-off by the customer.</inlineHelpText>
    <label>UAT End Date</label>
    <type>Date</type>
</CustomField>