foundation-objs/main/default/objects/Project__c/fields/UAT_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Requested_Date__c</fullName>
    <label>UAT Requested Date</label>
    <type>Date</type>
</CustomField>