foundation-objs/main/default/objects/Project__c/fields/UAT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Start_Date__c</fullName>
    <description>Date on which the customer actually started the UAT.</description>
    <inlineHelpText>Date on which the customer actually started the UAT.</inlineHelpText>
    <label>UAT Start Date</label>
    <type>Date</type>
</CustomField>