foundation-objs/main/default/objects/Project__c/fields/UAT_Status__c.field-meta.xml
<CustomField>
    <fullName>UAT_Status__c</fullName>
    <formula>IF((ISPICKVAL(Project_Stage__c,	&apos;UAT&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;Live&apos;)),
IF(NOT(ISBLANK(UAT_End_Date__c)), iF(UAT_End_Date__c &gt;  Benchmark_Date_UAT__c ,
&quot;RED&quot;,
&quot;GREEN&quot;),
IF(TODAY() &gt; Benchmark_Date_UAT__c,
&quot;RED&quot;,
&quot;GREEN&quot;)),&apos;NA&apos;)</formula>
    <label>UAT Status</label>
    <type>Text</type>
</CustomField>