foundation-objs/main/default/objects/Project__c/fields/VPN_Setup_completion_Actual_date__c.field-meta.xml
<CustomField>
    <fullName>VPN_Setup_completion_Actual_date__c</fullName>
    <label>VPN Setup completion : Actual date</label>
    <type>Date</type>
</CustomField>