foundation-objs/main/default/objects/Project__c/recordTypes/AMC_Module.recordType-meta.xml
<RecordType>
    <fullName>AMC_Module</fullName>
    <active>true</active>
    <label>AMC Module</label>
</RecordType>