foundation-objs/main/default/objects/Project__c/recordTypes/Invoice_Discounting.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Discounting</fullName>
    <active>true</active>
    <label>Invoice Discounting</label>
</RecordType>