foundation-objs/main/default/objects/Project__c/recordTypes/Max_ITC_SAP.recordType-meta.xml
<RecordType>
    <fullName>Max_ITC_SAP</fullName>
    <active>false</active>
    <label>Max ITC - SAP</label>
</RecordType>